--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    
-    ></script>
+    <h1>lista della spesa</h1>
+    <ul id="spesa">
+     
+    </ul>
+    </script>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
-<!-------
+
 
 
 
