--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <h1>lista della spesa</h1>
-    <ul id="spesa">
+    <div class="ciclowhile">
+      <h1>lista della spesa</h1>
+      <ul id="spesa">  </ul>
+    </div>
+    
      
-    </ul>
+  
+      <!--Script Bootstrap bundle-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
     </script>
     <script src="./assets/js/main.js"></script>
   </body>
