--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="ciclowhile">
       <h1>lista della spesa</h1>
-      <ul id="spesa">  </ul>
+      <ul id="lista">  </ul>
     </div>
     
      
